# CPP14TEST

./: CMakeLists.txt
lamda/: CMakeLists.txt  test_lamda.cpp
rval/: CMakeLists.txt  move_constructor.cpp  move_constructor.h  test_rvalue_ref.cpp
std_async/: CMakeLists.txt  std_async.cpp
std_begin_end/: CMakeLists.txt  std_begin_end.cpp
